Improved test coverage