@@ -2,7 +2,6 @@ package com.siopa.siopa_stores.service;
 
 import com.siopa.siopa_stores.helpers.DistanceHelper;
 import com.siopa.siopa_stores.kafka.KafkaProducerService;
-import com.siopa.siopa_stores.kafka.OwnerRoleUpdateEvent;
 import com.siopa.siopa_stores.models.Store;
 import com.siopa.siopa_stores.repositories.StoreRepository;
 import com.siopa.siopa_stores.requests.LocationRequest;
@@ -13,11 +12,15 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.math.BigDecimal;
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
+/**
+ * Unit tests for {@link StoreService}.
+ */
 @ExtendWith(MockitoExtension.class)
 class StoreServiceTest {
 
@@ -33,168 +36,190 @@ class StoreServiceTest {
     @InjectMocks
     private StoreService storeService;
 
-    private Store sampleStore;
+    private Store store;
     private UUID storeId;
     private UUID ownerId;
 
+    /**
+     * Sets up test data before each test case.
+     */
     @BeforeEach
     void setUp() {
         storeId = UUID.randomUUID();
         ownerId = UUID.randomUUID();
 
-        sampleStore = new Store();
-        sampleStore.setStoreId(storeId);
-        sampleStore.setName("Test Store");
-        sampleStore.setRegion("Test Region");
-        sampleStore.setAddress("Test Address");
-        sampleStore.setActive(true);
-        sampleStore.setPhoneNumber("1234567890");
-        sampleStore.setEmail("test@example.com");
-        sampleStore.setOwnerIds(new ArrayList<>());
-        sampleStore.setLatitude(55.0);
-        sampleStore.setLongitude(-5.0);
+        store = Store.builder()
+                .storeId(storeId)
+                .name("Test Store")
+                .region("Test Region")
+                .address("123 Test Street")
+                .isActive(true)
+                .phoneNumber("1234567890")
+                .email("test@store.com")
+                .ownerIds(new ArrayList<>(List.of(ownerId)))
+                .latitude(40.7128)
+                .longitude(-74.0060)
+                .storeType("Grocery")
+                .rating(5)
+                .deliveryFee(BigDecimal.valueOf(5.99))
+                .build();
     }
 
+    /**
+     * Tests retrieval of all stores.
+     */
     @Test
-    void testGetAllStores() {
-        when(storeRepository.findAll()).thenReturn(Collections.singletonList(sampleStore));
+    void getAllStores_ShouldReturnListOfStores() {
+        when(storeRepository.findAll()).thenReturn(List.of(store));
 
         List<Store> result = storeService.getAllStores();
 
-        assertFalse(result.isEmpty());
         assertEquals(1, result.size());
-        assertEquals(sampleStore, result.get(0));
+        assertEquals("Test Store", result.get(0).getName());
+        verify(storeRepository, times(1)).findAll();
     }
 
+    /**
+     * Tests retrieval of a store by ID.
+     */
     @Test
-    void testGetStoreById() {
-        when(storeRepository.findById(storeId)).thenReturn(Optional.of(sampleStore));
+    void getStoreById_ShouldReturnStore_WhenFound() {
+        when(storeRepository.findById(storeId)).thenReturn(Optional.of(store));
 
         Optional<Store> result = storeService.getStoreById(storeId);
 
         assertTrue(result.isPresent());
-        assertEquals(sampleStore, result.get());
+        assertEquals("Test Store", result.get().getName());
+        verify(storeRepository, times(1)).findById(storeId);
     }
 
+    /**
+     * Tests retrieval of a store by email.
+     */
     @Test
-    void testGetStoreByEmail() {
-        when(storeRepository.findByEmail(sampleStore.getEmail())).thenReturn(Optional.of(sampleStore));
+    void getStoreByEmail_ShouldReturnStore_WhenFound() {
+        when(storeRepository.findByEmail(store.getEmail())).thenReturn(Optional.of(store));
 
-        Optional<Store> result = storeService.getStoreByEmail(sampleStore.getEmail());
+        Optional<Store> result = storeService.getStoreByEmail(store.getEmail());
 
         assertTrue(result.isPresent());
-        assertEquals(sampleStore, result.get());
+        assertEquals("Test Store", result.get().getName());
+        verify(storeRepository, times(1)).findByEmail(store.getEmail());
     }
 
+    /**
+     * Tests retrieval of active stores.
+     */
     @Test
-    void testGetActiveStores() {
-        when(storeRepository.findByIsActiveTrue()).thenReturn(Collections.singletonList(sampleStore));
+    void getActiveStores_ShouldReturnListOfActiveStores() {
+        when(storeRepository.findByIsActiveTrue()).thenReturn(List.of(store));
 
         List<Store> result = storeService.getActiveStores();
 
-        assertFalse(result.isEmpty());
         assertEquals(1, result.size());
+        assertTrue(result.get(0).isActive());
+        verify(storeRepository, times(1)).findByIsActiveTrue();
     }
 
+    /**
+     * Tests creation of a new store.
+     */
     @Test
-    void testCreateStore() {
-        when(storeRepository.save(sampleStore)).thenReturn(sampleStore);
+    void createStore_ShouldSaveAndReturnStore() {
+        when(storeRepository.save(store)).thenReturn(store);
 
-        Store result = storeService.createStore(sampleStore);
+        Store result = storeService.createStore(store);
 
         assertNotNull(result);
-        assertEquals(sampleStore, result);
+        assertEquals("Test Store", result.getName());
+        verify(storeRepository, times(1)).save(store);
     }
 
+    /**
+     * Tests updating an existing store.
+     */
     @Test
-    void testUpdateStore() {
-        Store updatedStore = new Store();
+    void updateStore_ShouldUpdateAndReturnStore_WhenStoreExists() {
+        Store updatedStore = store;
         updatedStore.setName("Updated Store");
 
-        when(storeRepository.findById(storeId)).thenReturn(Optional.of(sampleStore));
+        when(storeRepository.findById(storeId)).thenReturn(Optional.of(store));
         when(storeRepository.save(any(Store.class))).thenReturn(updatedStore);
 
         Store result = storeService.updateStore(storeId, updatedStore);
 
-        assertNotNull(result);
         assertEquals("Updated Store", result.getName());
+        verify(storeRepository, times(1)).save(store);
     }
 
+    /**
+     * Tests deleting a store by ID.
+     */
     @Test
-    void testUpdateStoreNotFound() {
-        when(storeRepository.findById(storeId)).thenReturn(Optional.empty());
-
-        assertThrows(RuntimeException.class, () -> storeService.updateStore(storeId, sampleStore));
-    }
-
-    @Test
-    void testDeleteStore() {
+    void deleteStore_ShouldDeleteStore_WhenStoreExists() {
         doNothing().when(storeRepository).deleteById(storeId);
 
-        assertDoesNotThrow(() -> storeService.deleteStore(storeId));
+        storeService.deleteStore(storeId);
+
         verify(storeRepository, times(1)).deleteById(storeId);
     }
 
+    /**
+     * Tests adding an owner to a store.
+     */
     @Test
-    void testAddOwnerToStore() {
-        when(storeRepository.findById(storeId)).thenReturn(Optional.of(sampleStore));
-        when(storeRepository.save(sampleStore)).thenReturn(sampleStore);
-        doNothing().when(kafkaProducerService).sendRoleUpdateMessage(any(OwnerRoleUpdateEvent.class));
+    void addOwnerToStore_ShouldAddOwnerAndReturnStore() {
+        UUID newOwnerId = UUID.randomUUID();
+        when(storeRepository.findById(storeId)).thenReturn(Optional.of(store));
+        when(storeRepository.save(any(Store.class))).thenReturn(store);
 
-        Store result = storeService.addOwnerToStore(storeId, ownerId);
+        Store result = storeService.addOwnerToStore(storeId, newOwnerId);
 
-        assertNotNull(result);
-        assertTrue(result.getOwnerIds().contains(ownerId));
+        assertTrue(result.getOwnerIds().contains(newOwnerId));
+        verify(storeRepository, times(1)).save(store);
     }
 
+    /**
+     * Tests removing an owner from a store.
+     */
     @Test
-    void testRemoveOwnerFromStore() {
-        sampleStore.getOwnerIds().add(ownerId);
-        when(storeRepository.findById(storeId)).thenReturn(Optional.of(sampleStore));
-        when(storeRepository.save(sampleStore)).thenReturn(sampleStore);
+    void removeOwnerFromStore_ShouldRemoveOwnerAndReturnStore() {
+        when(storeRepository.findById(storeId)).thenReturn(Optional.of(store));
+        when(storeRepository.save(any(Store.class))).thenReturn(store);
 
         Store result = storeService.removeOwnerFromStore(storeId, ownerId);
 
-        assertNotNull(result);
         assertFalse(result.getOwnerIds().contains(ownerId));
+        verify(storeRepository, times(1)).save(store);
     }
 
+    /**
+     * Tests retrieving stores by owner ID.
+     */
     @Test
-    void testGetStoresByOwner() {
-        when(storeRepository.findByOwnerId(ownerId)).thenReturn(Collections.singletonList(sampleStore));
+    void getStoresByOwner_ShouldReturnListOfStores() {
+        when(storeRepository.findByOwnerId(ownerId)).thenReturn(List.of(store));
 
         List<Store> result = storeService.getStoresByOwner(ownerId);
 
-        assertFalse(result.isEmpty());
         assertEquals(1, result.size());
+        assertEquals(storeId, result.get(0).getStoreId());
+        verify(storeRepository, times(1)).findByOwnerId(ownerId);
     }
 
+    /**
+     * Tests finding stores within a given location radius.
+     */
     @Test
-    void testFindStoresByLatLng() {
-        LocationRequest locationRequest = new LocationRequest();
-        locationRequest.setLatitude(55.1);
-        locationRequest.setLongitude(-5.1);
-
-        when(storeRepository.findAll()).thenReturn(Collections.singletonList(sampleStore));
+    void findStoresByLatLng_ShouldReturnNearbyStores() {
+        LocationRequest locationRequest = new LocationRequest(40.7128, -74.0060);
+        when(storeRepository.findAll()).thenReturn(List.of(store));
         when(distanceHelper.distanceCalculation(anyDouble(), anyDouble(), anyDouble(), anyDouble())).thenReturn(5.0);
 
         List<Store> result = storeService.findStoresByLatLng(locationRequest);
 
-        assertFalse(result.isEmpty());
         assertEquals(1, result.size());
-    }
-
-    @Test
-    void testFindStoresByLatLngNoStoresFound() {
-        LocationRequest locationRequest = new LocationRequest();
-        locationRequest.setLatitude(60.0);
-        locationRequest.setLongitude(-10.0);
-
-        when(storeRepository.findAll()).thenReturn(Collections.singletonList(sampleStore));
-        when(distanceHelper.distanceCalculation(anyDouble(), anyDouble(), anyDouble(), anyDouble())).thenReturn(20.0);
-
-        List<Store> result = storeService.findStoresByLatLng(locationRequest);
-
-        assertTrue(result.isEmpty());
+        verify(storeRepository, times(1)).findAll();
+        verify(distanceHelper, times(1)).distanceCalculation(anyDouble(), anyDouble(), anyDouble(), anyDouble());
     }
 }
